# webrs

./: .gitignore  Cargo.toml  LICENSE  application.yaml  config.toml  schema.sql
src/: api.rs  app.rs  config.rs  entity.rs  main.rs  web.rs
src/api/: auth.rs  user.rs
src/app/: auth.rs  common.rs  database.rs  enumeration.rs  error.rs  id.rs  json.rs  latency.rs  logger.rs  middleware.rs  path.rs  response.rs  serde.rs  server.rs  utils.rs  valid.rs  validation.rs
src/entity/: sys_user.rs
